fix mobile display
minimize section previously would be far too tall on mobile devices

--- a/spotify-playlist.css
+++ b/spotify-playlist.css
@@ -244,4 +244,7 @@ iframe {
     top: 1rem;
     right: 1rem;
   }
+  #player-minimize {
+    height: 0.5rem !important;
+  }
 }
